added api+fixed  --v0.1.01

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ malody_api/utils/__pycache__/*
 malody_api/routers/__pycache__/*
 malody_api/core/services/__pycache__/*
 malody_api/routers/__pycache__/*
+sid_backwards_progress.json
